# Mercado_Libre_ETL

./: README.md  pyproject.toml
docs/: desafio.md
notebooks/: api_connection.ipynb  endpoints_eda.ipynb
src/extract/: ml_oauth.py
