[project]
name = "mercado-libre-etl"
version = "0.1.0"
description = "A data analysis project for Mercado Libre"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "env>=0.1.0",
    "fastparquet>=2024.11.0",
    "flask>=3.1.2",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "mkdocs>=1.6.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
